edit index.hbs again

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
       <div class="jumbotron">
         <h3 style="text-align: center">{{question}}</h3>
       </div>
-      <h4 style="text-align: center">-- OR --<br/>more specifically test:</h4>
+      <h4 style="text-align: center">-- OR test --<br/>more specifically test:</h4>
       {{#each categories}}
         <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='/?category={{@index}}'">
           {{this}}
